--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,10 @@ elseif(MSVC)
   add_compile_options(/W4 /WX)
 endif()
 
+# temporary fix for release buid
+# todo: remove this
+add_compile_options(-Wno-error=maybe-uninitialized)
+
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} \
     -fsanitize=address \
     -fsanitize=bool \
@@ -116,10 +120,10 @@ endif()
 ################################################################################
 ### installation
 
-install(TARGETS msp_fcu mspclient
-    LIBRARY DESTINATION lib
-    ARCHIVE DESTINATION lib)
-install(DIRECTORY ${MSP_INCLUDE_DIR} DESTINATION include/ FILES_MATCHING PATTERN "*.hpp")
+# install(TARGETS msp_fcu mspclient
+#     LIBRARY DESTINATION lib
+#     ARCHIVE DESTINATION lib)
+# install(DIRECTORY ${MSP_INCLUDE_DIR} DESTINATION include/ FILES_MATCHING PATTERN "*.hpp")
 
 SET(PKG_CONFIG_LIBDIR       "\${prefix}/lib")
 SET(PKG_CONFIG_INCLUDEDIR   "\${prefix}/include/")
@@ -131,8 +135,8 @@ CONFIGURE_FILE(
   "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc"
 )
 
-INSTALL(FILES "${CMAKE_BINARY_DIR}/${PROJECT_NAME}.pc"
-        DESTINATION lib/pkgconfig)
+# INSTALL(FILES "${CMAKE_BINARY_DIR}/${PROJECT_NAME}.pc"
+#         DESTINATION lib/pkgconfig)
 
 
 
